MDEV-13300 Query cache doesn't take in account CLIENT_DEPRECATE_EOF capability

take into account new capabilty flag which has influence on result format.